__**Update 4.4.8**__
- added `Donator` role bypass for Auto whitelist wait time.
    - added `/whitelist donator_bypass` command.


__**Update 4.4.7**__
- fixed issue with `whitelist_request_handler()` when attempting to use a non unique IGN. Thanks @Snaggolicious#4987
- split `AMP.py` class's into seperate files for future ease of usage/editing.
    - Updated any related `AMP.py` calls and any type checking related to `AMPInstance, AMPHandler` and `AMPConsole`
- fixed logic on `/bot permissions` command
- updated info on `/bot utils clear` command
- cleaned up formatting of `bot_utils_sync` method
- updated the layout of `bot_settings_embed` inside `utils_embeds.py` which will provide a cleaner display for `/bot settings` command
- fixed issue with donator flag not updating on banners. Thanks @FeminalPanda#7879
    - updated `commands.md` to reflect the changes.
- began making `sub_group_handler` for adding commands to an existing command group.
- fixed issue with `server banners` not resetting when the discord channel was deleted. Thanks @hotdamnitsaaron#1501
- fixed issue with `whitelisting`, was failing with duplicate IGNs. Thanks @Snaggolicious#4987
- added `intents.jpg` to be used with `Readme.md`
- Servers that are `Hidden` via `/server settings hidden` will be omitted when a `NON STAFF` member uses an autocomplete that provides server names.
- added a `dev` print to `AMP` Login's if they fail.
- fixed typo in `/bot permissions` when attempting to sync commands to the current guild. 
- changed formatting of `dev` prints inside of `loader.py`
- added fix for `dict` issues inside of `AMP_server_cog.py` for method `_banner_generator`. 
    - Edge case when generating banners and creating an new instance at the same time.
- changed formatting of `dev` prints on multiple files for better readability.
- Updated `Display Banners` --
    - fixed issue with `Banners` not displaying `Donator Only` when the flag was set.